--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -1,4 +1,5 @@
 $Roboto: "Roboto", sans-serif;
+$Opensans: 'Open Sans', sans-serif;
 $font-s: 10px;
 $font-m: 13px;
 $font-l: 1.302vw;
@@ -6,18 +7,35 @@ $font-xl: 13px;
 $font-xxl: 20px;
 
 
-$black: #000;
+$black: #000000;
 $white: #fff;
 $orange:#FF7700;
-$grey:#303030;
 $halfwhite: #F5F5F7;
 
+$neon:#C3DA37;
+$greyblue:#839292;
+$grey:#8D8D8D;
+
+$greengrey:#839292;
+
+$radius:2.604vw;
+$radius-m:12.077vw;
+
+
 $transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-$transitiontf: all 1.8s cubic-bezier(0.47,0.01,0.4,0.99);
+$transitiontf: all 0.5s cubic-bezier(0.47,0.01,0.4,0.99);
 
 body{
     // color: $white;
-    font-family: $Roboto;
-    padding: 0;
+    font-family:$Opensans;
+    padding: 0.521vw;
     margin: 0;
+    background-color: $white;
+}
+
+@media screen and (max-width: 480px) {
+    body{
+        padding: 2.415vw;
+    }
+
 }
